--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
         </activity>
 
     <activity android:name=".NoteEdit"></activity>
+    <activity android:name=".unitChange"></activity>
 </application>
 
 
